--- a/KinectViewer.vcxproj
+++ b/KinectViewer.vcxproj
@@ -55,7 +55,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <SubSystem>NotSet</SubSystem>
+      <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>D:\fyp\KinectViewer\packages\nupengl.core.0.0.0.1\build\native\lib\x64\v120</AdditionalLibraryDirectories>
       <AdditionalDependencies>Kinect20.lib;freeglut.lib;glew32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
@@ -85,9 +85,9 @@
     <ClCompile Include="Core\ShaderLoader.cpp" />
     <ClCompile Include="Common\GlWindow.cpp" />
     <ClCompile Include="Common\KinectCamera.cpp" />
-    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Common\ModelGenerator.cpp" />
     <ClCompile Include="Core\Timer.cpp" />
+    <ClCompile Include="Test\huffman.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\Camera.h" />
