--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="boost" version="1.58.0.0" targetFramework="Native" />
   <package id="glm" version="0.9.6.3" targetFramework="Native" />
   <package id="nupengl.core" version="0.0.0.1" targetFramework="Native" />
   <package id="nupengl.core.redist" version="0.0.0.1" targetFramework="Native" />
