--- a/KinectViewer.vcxproj
+++ b/KinectViewer.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="Core\Timer.cpp" />
     <ClCompile Include="Common\HuffmanCompressor.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Common\StdHuffmanCompressor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\Camera.h" />
@@ -101,6 +102,7 @@
     <ClInclude Include="Common\GlWindow.h" />
     <ClInclude Include="Common\ModelGenerator.h" />
     <ClInclude Include="Core\Timer.h" />
+    <ClInclude Include="Common\StdHuffmanCompressor.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
