--- a/KinectViewer.vcxproj.filters
+++ b/KinectViewer.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Common\HuffmanCompressor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Common\StdHuffmanCompressor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\ShaderLoader.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Primitives\CameraParameters.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\StdHuffmanCompressor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
