--- a/KinectViewer.vcxproj
+++ b/KinectViewer.vcxproj
@@ -96,6 +96,7 @@
     <ClInclude Include="Common\KinectCamera.h" />
     <ClInclude Include="Common\HuffmanCompressor.h" />
     <ClInclude Include="Primitives\CameraParameters.h" />
+    <ClInclude Include="Primitives\DataSize.h" />
     <ClInclude Include="Primitives\PointCloud.h" />
     <ClInclude Include="Core\ShaderLoader.h" />
     <ClInclude Include="Primitives\Vertex.h" />
