Add test code for ICP implementation

--- a/KinectViewer.vcxproj
+++ b/KinectViewer.vcxproj
@@ -50,13 +50,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\fyp\KinectViewer\KinectViewer;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\fyp\KinectViewer\Include;D:\fyp\KinectViewer\KinectViewer;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions);_SCL_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>NotSet</SubSystem>
-      <AdditionalLibraryDirectories>D:\fyp\KinectViewer\packages\nupengl.core.0.0.0.1\build\native\lib\x64\v120</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\fyp\KinectViewer\Include\TooN-2.2;D:\fyp\KinectViewer\packages\nupengl.core.0.0.0.1\build\native\lib\x64\v120</AdditionalLibraryDirectories>
       <AdditionalDependencies>Kinect20.lib;freeglut.lib;glew32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -67,7 +67,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\fyp\KinectViewer\KinectViewer;C:\Program Files\Microsoft SDKs\Kinect\v2.0_1409\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\fyp\KinectViewer\Include;D:\fyp\KinectViewer\KinectViewer;C:\Program Files\Microsoft SDKs\Kinect\v2.0_1409\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -88,8 +88,8 @@
     <ClCompile Include="Common\ModelGenerator.cpp" />
     <ClCompile Include="Core\Timer.cpp" />
     <ClCompile Include="Common\HuffmanCompressor.cpp" />
-    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Common\StdHuffmanCompressor.cpp" />
+    <ClCompile Include="Test\icp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\Camera.h" />
