--- a/KinectViewer.vcxproj.filters
+++ b/KinectViewer.vcxproj.filters
@@ -36,13 +36,13 @@
     <ClCompile Include="Core\Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Common\HuffmanCompressor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Common\StdHuffmanCompressor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Test\icp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
