Add ICP implementation

--- a/KinectViewer.vcxproj
+++ b/KinectViewer.vcxproj
@@ -89,12 +89,14 @@
     <ClCompile Include="Core\Timer.cpp" />
     <ClCompile Include="Common\HuffmanCompressor.cpp" />
     <ClCompile Include="Common\StdHuffmanCompressor.cpp" />
+    <ClCompile Include="Common\ICP.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\Camera.h" />
     <ClInclude Include="Common\KinectCamera.h" />
     <ClInclude Include="Common\HuffmanCompressor.h" />
+    <ClInclude Include="Common\ICP.h" />
     <ClInclude Include="Primitives\CameraParameters.h" />
     <ClInclude Include="Primitives\DataSize.h" />
     <ClInclude Include="Primitives\PointCloud.h" />
