--- a/KinectViewer.vcxproj.filters
+++ b/KinectViewer.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Common\StdHuffmanCompressor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Common\ICP.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Primitives\DataSize.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\ICP.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
